--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "nuxt": "^2.0.0",
-    "vue-property-decorator": "^8.3.0"
+    "vue-property-decorator": "^8.3.0",
+    "vuex-module-decorators": "^0.11.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.3.10"
